# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py
gendiff/formatters/: format.py  format_plain.py  format_playn.py
gendiff/parsers/: generate_diff.py  open_file.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_open_file.py
